name:               ghc-datasize
version:            0.3.0
license:            BSD3
license-file:       LICENSE
category:           GHC, Debug, Development
cabal-version:      >= 1.10
build-type:         Custom
author:             Dennis Felsing <dennis@felsin9.de>
maintainer:         Dennis Felsing <dennis@felsin9.de>
homepage:           http://felsin9.de/nnis/ghc-datasize
copyright:          Dennis Felsing 2012
synopsis:           Determine the size of data structures in GHC's memory
description:        ghc-datasize is a tool to determine the size of data
                    structures in GHC's memory. Determining the size of
                    recursive data structures is supported.
                    All sizes are in bytes.
tested-with:        GHC == 8.6.4

library
  exposed-modules:  GHC.DataSize
  default-language: Haskell2010
  build-depends:    base == 4.*, deepseq, ghc-prim, ghc-heap == 8.6.4
  hs-source-dirs:   src/
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/def-/ghc-datasize.git
